@@ -4,17 +4,19 @@ package ca.uhn.fhir.jpa.starter;
 import ca.uhn.fhir.context.FhirVersionEnum;
 import ca.uhn.fhir.jpa.api.config.JpaStorageSettings.ClientIdStrategyEnum;
 import ca.uhn.fhir.jpa.model.entity.NormalizedQuantitySearchLevel;
+import ca.uhn.fhir.jpa.packages.PackageInstallationSpec;
 import ca.uhn.fhir.rest.api.EncodingEnum;
-import com.google.common.collect.ImmutableList;
 import org.hl7.fhir.r4.model.Bundle;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 @ConfigurationProperties(prefix = "hapi.fhir")
 @Configuration
@@ -33,6 +35,7 @@ public class AppProperties {
   private Boolean allow_multiple_delete = false;
   private Boolean allow_override_default_search_params = true;
   private Boolean auto_create_placeholder_reference_targets = false;
+  private final Set<String> auto_version_reference_at_paths = new HashSet<>();
   private Boolean dao_scheduling_enabled = true;
   private Boolean delete_expunge_enabled = false;
   private Boolean enable_index_missing_fields = false;
@@ -64,6 +67,8 @@ public class AppProperties {
   private List<Bundle.BundleType> allowed_bundle_types = null;
   private Boolean narrative_enabled = true;
 
+  private Boolean ig_runtime_upload_enabled = false;
+
   private Validation validation = new Validation();
   private Map<String, Tester> tester = null;
   private Logger logger = new Logger();
@@ -71,10 +76,11 @@ public class AppProperties {
   private Cors cors = null;
   private Partitioning partitioning = null;
   private Boolean install_transitive_ig_dependencies = true;
-  private Boolean reload_existing_implementationguides = false;
-  private Map<String, ImplementationGuide> implementationGuides = null;
+  private Map<String, PackageInstallationSpec> implementationGuides = null;
 
 	private String staticLocation = null;
+
+	private String staticLocationPrefix = "/static";
 
   private Boolean lastn_enabled = false;
   private boolean store_resource_in_lucene_index_enabled = false;
@@ -85,11 +91,20 @@ public class AppProperties {
 
   private Integer bundle_batch_pool_size = 20;
   private Integer bundle_batch_pool_max_size = 100;
-  private final List<String> local_base_urls = new ArrayList<>();
+  private final Set<String> local_base_urls = new HashSet<>();
   
   private final List<String> custom_interceptor_classes = new ArrayList<>();
 
-  public List<String> getCustomInterceptorClasses() {
+	public String getStaticLocationPrefix() {
+		return staticLocationPrefix;
+	}
+
+	public void setStaticLocationPrefix(String staticLocationPrefix) {
+		this.staticLocationPrefix = staticLocationPrefix;
+	}
+
+
+	public List<String> getCustomInterceptorClasses() {
     return custom_interceptor_classes;
   }
 
@@ -135,11 +150,11 @@ public class AppProperties {
     this.defer_indexing_for_codesystems_of_size = defer_indexing_for_codesystems_of_size;
   }
 
-  public Map<String, ImplementationGuide> getImplementationGuides() {
+  public Map<String, PackageInstallationSpec> getImplementationGuides() {
     return implementationGuides;
   }
 
-  public void setImplementationGuides(Map<String, ImplementationGuide> implementationGuides) {
+  public void setImplementationGuides(Map<String, PackageInstallationSpec> implementationGuides) {
     this.implementationGuides = implementationGuides;
   }
 
@@ -305,6 +320,10 @@ public class AppProperties {
   public void setAuto_create_placeholder_reference_targets(
     Boolean auto_create_placeholder_reference_targets) {
     this.auto_create_placeholder_reference_targets = auto_create_placeholder_reference_targets;
+  }
+
+  public Set<String> getAuto_version_reference_at_paths() {
+    return auto_version_reference_at_paths;
   }
 
   public Integer getDefault_page_size() {
@@ -547,14 +566,6 @@ public class AppProperties {
 		this.install_transitive_ig_dependencies = install_transitive_ig_dependencies;
 	}
 	
-	public boolean getReload_existing_implementationguides() {
-		return reload_existing_implementationguides;
-	}
-	
-	public void setReload_existing_implementationguides(boolean reload_existing_implementationguides) {
-		this.reload_existing_implementationguides = reload_existing_implementationguides;
-	}
-
 	public Integer getBundle_batch_pool_size() {
 		return this.bundle_batch_pool_size;
 	}
@@ -571,13 +582,21 @@ public class AppProperties {
 		this.bundle_batch_pool_max_size = bundle_batch_pool_max_size;
 	}
 
-	public List<String> getLocal_base_urls() {
+	public Set<String> getLocal_base_urls() {
 		return local_base_urls;
+	}
+
+	public Boolean getIg_runtime_upload_enabled() {
+		return ig_runtime_upload_enabled;
+	}
+
+	public void setIg_runtime_upload_enabled(Boolean ig_runtime_upload_enabled) {
+		this.ig_runtime_upload_enabled = ig_runtime_upload_enabled;
 	}
 
 	public static class Cors {
     private Boolean allow_Credentials = true;
-    private List<String> allowed_origin = ImmutableList.of("*");
+    private List<String> allowed_origin = List.of("*");
 
     public List<String> getAllowed_origin() {
       return allowed_origin;
@@ -679,36 +698,6 @@ public class AppProperties {
     }
   }
 
-  public static class ImplementationGuide
-  {
-    private String url;
-    private String name;
-    private String version;
-
-    public String getUrl() {
-      return url;
-    }
-
-    public void setUrl(String url) {
-      this.url = url;
-    }
-
-    public String getName() {
-      return name;
-    }
-
-    public void setName(String name) {
-      this.name = name;
-    }
-
-    public String getVersion() {
-      return version;
-    }
-
-    public void setVersion(String version) {
-      this.version = version;
-    }
-  }
 
   public static class Validation {
 
